# mockapi

./: .pre-commit-config.yaml  Makefile  README.md  app.py  log_cfg_debug.yaml  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
api/v2/: __init__.py  handlers.py  schemas.py
api/v2/core/: __init__.py  handlers.py  schemas.py
api/v2/pools/: __init__.py  handlers.py  schemas.py
api/v2/tasks/: __init__.py  handlers.py  schemas.py
api/v2/users/: __init__.py  handlers.py  schemas.py
core/: db.py  enums.py  errors.py  schemas.py  unifiers.py  utils.py  ws.py
service/: handlers.py  schemas.py
tests/: conftest.py  test_api_v2_core.py  test_api_v2_pools.py  test_api_v2_tasks.py  test_api_v2_users.py  test_service.py
