[project]
name = "mockapi"
version = "0.0.1"
description = ""
authors = [
    {name = "Aleksei Devyatkin",email = "aleksei@devyatkin.dev"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
